--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.0.1",
     "axios": "^1.4.0",
     "boxicons": "^2.1.4",
     "flowbite": "^1.6.6",
